add endpoint to generate testdata
